{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 35,
  "lineage": "1331a2a5-dba3-3f28-ed79-65934343b4d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terpractice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264206689:internet-gateway/igw-0c93d8af8371808f1",
            "id": "igw-0c93d8af8371808f1",
            "owner_id": "058264206689",
            "vpc_id": "vpc-0c9525f44e3c03139"
          },
          "dependencies": [
            "aws_vpc.terpractice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264206689:route-table/rtb-001745abe2f91dd23",
            "id": "rtb-001745abe2f91dd23",
            "owner_id": "058264206689",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c9525f44e3c03139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terpractice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264206689:route-table/rtb-02dffa152a12f674c",
            "id": "rtb-02dffa152a12f674c",
            "owner_id": "058264206689",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c93d8af8371808f1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c9525f44e3c03139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terpractice",
            "aws_vpc.terpractice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096776b8bf1728e0f",
            "route_table_id": "rtb-001745abe2f91dd23",
            "subnet_id": "subnet-032eacde80c74a4fa"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.terpractice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070e1359394f4dd07",
            "route_table_id": "rtb-02dffa152a12f674c",
            "subnet_id": "subnet-08e6476f9f60ef506"
          },
          "dependencies": [
            "aws_internet_gateway.terpractice",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.terpractice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264206689:security-group/sg-06be7f9c9f6ac6c1e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06be7f9c9f6ac6c1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "058264206689",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terpractice_sg"
            },
            "tags_all": {
              "Name": "terpractice_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9525f44e3c03139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terpractice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264206689:subnet/subnet-032eacde80c74a4fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032eacde80c74a4fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264206689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c9525f44e3c03139"
          },
          "dependencies": [
            "aws_vpc.terpractice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264206689:subnet/subnet-08e6476f9f60ef506",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e6476f9f60ef506",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264206689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c9525f44e3c03139"
          },
          "dependencies": [
            "aws_vpc.terpractice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terpractice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:058264206689:vpc/vpc-0c9525f44e3c03139",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00207d060034ccd6d",
            "default_route_table_id": "rtb-00051f1a4d440e56b",
            "default_security_group_id": "sg-0ba70ec71a98b977b",
            "dhcp_options_id": "dopt-09a7d7817504725f9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9525f44e3c03139",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00051f1a4d440e56b",
            "owner_id": "058264206689",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}